--- a/src/main/resources/templates/feed/readwrite.html
+++ b/src/main/resources/templates/feed/readwrite.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>히포북</title>
-    <link rel="stylesheet" th:href="@{/css/feed/readwrite.css}" />
+    <link rel="stylesheet" th:href="@{/css/feed/readwrite.css}">
     <script defer th:src="@{/js/feed/category_modal.js}"></script>
   </head>
   <body>
