--- a/src/main/resources/templates/mypage/myPageBookContainer.html
+++ b/src/main/resources/templates/mypage/myPageBookContainer.html
@@ -95,9 +95,11 @@
                     <span>팔로잉 <span>0</span></span>
                 </div>
             </div>
-            <div id="my-favorite-book">
-                <img src="/images/mypage/인생책 이미지.png" alt=""/>
-            </div>
+            <th:block>
+                <div id="my-favorite-book">
+                    <img id="best-book-img" alt=""/>
+                </div>
+            </th:block>
         </section>
     </div>
     <div>
