관리자 신고 페이지 신고 게시판 정보 쿼리 작성 및 api 생성

--- a/src/main/resources/templates/administrator/admin_declaration.html
+++ b/src/main/resources/templates/administrator/admin_declaration.html
@@ -260,11 +260,7 @@
                             <td></td>
                           </tr>
                           <tr>
-                            <th>날짜</th>
-                            <td></td>
-                          </tr>
-                          <tr>
-                            <th>제목</th>
+                            <th>작성일</th>
                             <td></td>
                           </tr>
                           <tr>
