Revert "Merge branch 'feed/day04(read)'"
This reverts commit ad0ed2eb9e360cc11e0356f8d6729d628375acf4, reversing
changes made to a46a20f782df3bc46ae2249dba60fa6ac75180c5.

--- a/src/main/resources/templates/user/check_account.html
+++ b/src/main/resources/templates/user/check_account.html
@@ -49,7 +49,7 @@
                         </div>
                         <div class="controller">
                             <button type="button" class="mds-button mds-button--quaternary mds-button--line mds-button--h40 mds-button--r4">
-                                <a th:href="@{/user/password-reset}">비밀번호 재설정</a>
+                                <a th:href="@{/user/passwordreset}">비밀번호 재설정</a>
                             </button>
                             <button type="button" class="mds-button mds-button--quaternary mds-button--line mds-button--h40 mds-button--r4">
                                 <a th:href="@{/user/login}">로그인 하기</a>
