--- a/src/main/resources/templates/user/find_account_phone_info_code.html
+++ b/src/main/resources/templates/user/find_account_phone_info_code.html
@@ -51,7 +51,7 @@
                 </p>
                 <div class="button-area mt16">
                     <button type="button" disabled="disabled" class="next-button mds-button mds-button--primary mds-button--h56 mds-button--r4">
-                        <a th:href="@{/user/check-account}">다음</a>
+                        <a th:href="@{/user/checkaccount}">다음</a>
                     </button>
                 </div>
             </div>
