--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -75,10 +75,10 @@
     </div>
     <ul data-b-1130 class="login-sub-menu">
       <li data-b-1130>
-        <a data-b-1130 th:href="@{/user/terms-of-use}">회원가입</a>
+        <a data-b-1130 th:href="@{/user/register}">회원가입</a>
       </li>
 <!--      <li data-b-1130>-->
-        <a data-b-1130 th:href="@{/user/find-phone-info}">계정 정보 찾기</a>
+        <a data-b-1130 th:href="@{/user/findaccountphoneinfo}">계정 정보 찾기</a>
 <!--      </li>-->
 <!--      <li data-b-1130>-->
 <!--        <a data-b-1130 href="">기업회원 로그인</a>-->
