--- a/src/main/resources/templates/user/terms_of_use.html
+++ b/src/main/resources/templates/user/terms_of_use.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" th:href="@{/css/user/login.css}">
   <link rel="stylesheet" th:href="@{/css/user/hippobook.css}">
   <!--  <link rel="stylesheet" href="/HBREGISTER/css/joinAuth.css">-->
-  <script type="text/javascript" th:src="@{js/user/termsofuse}"></script>
 </head>
 <body data-theme="light">
 <div data-a-1120 id="wrap" class="web-mount">
@@ -167,7 +166,7 @@
               </div>
               <div class="mds-dialog--footer">
                 <button data-d-1150 type="submit" class="apply mds-button mds-button--primary mds-button--h56" >
-                  <a th:href="@{/user/phone-info}">확인</a>
+                  <a th:href="@{/user/phoneinfo}">확인</a>
                 </button>
               </div>
             </div>
@@ -177,5 +176,7 @@
     </div>
   </section>
 </div>
+<script type="text/javascript" th:src="@{js/user/termsofuse}">
+</script>
 </body>
 </html>
