--- a/src/main/resources/static/css/main/mainpage.css
+++ b/src/main/resources/static/css/main/mainpage.css
@@ -54,19 +54,18 @@ header {
 }
 
 .header_right_login_btn {
-  border-radius: 3px;
+  border-radius: 8px;
   border: 1px solid #2bc1bf;
+  background-color: white;
 }
 
 .header_right_login_box {
   color: black;
-  background-color: #ffffff;
   width: 80px;
   height: 32px;
   display: flex;
   align-items: center;
   justify-content: center;
-
   font-size: 12px;
   text-decoration: none;
   border: none;
@@ -295,7 +294,6 @@ a {
 .none {
   display: none;
 }
-
 /* 메인페이지 배너 밑 부분  */
 .main_layout {
   max-width: 1440px;
@@ -322,6 +320,16 @@ a {
   max-height: 350px;
   max-width: 400px;
 }
+
+.hipppo_ranking-box {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+.ranking_border_box_wrap{
+  width: 30%;
+}
+
 
 .hipppo_ranking_layout {
   max-width: 1440px;
@@ -356,7 +364,7 @@ a {
   cursor: pointer;
 }
 
-.rank_num {
+.rank_num1 {
   background-position-x: -20px;
   background-position-y: -20px;
   position: absolute;
@@ -487,11 +495,15 @@ a {
 .book_picture {
   min-width: 80px;
   max-width: 80px;
-  min-height: 112px;
-  max-height: 112px;
+  min-height: 120px;
+  max-height: 120px;
   padding-top: 0;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .ir {
@@ -519,8 +531,6 @@ a {
   line-height: 20px;
   overflow: hidden;
   text-overflow: ellipsis;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
   word-wrap: break-word;
   max-height: 1.35em;
 }
@@ -542,7 +552,7 @@ a {
   display: flex;
   position: relative;
   align-items: center;
-  margin-top: 16px;
+  margin-top: 20px;
   padding: 0 24px;
   min-height: 84px;
   bottom: 380px;
@@ -840,16 +850,7 @@ a {
   align-items: center;
 }
 
-.main_book_report_writer_content_icon {
-  width: 24px;
-  height: 24px;
-  margin-right: 4px;
-  background-size: cover;
-  background-position: 50%;
-  border-radius: 50px;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.25);
-  background-image: url("https://ofbxchnhqinp910256.cdn.ntruss.com/100/19ebc549ddcbac25c5ae089a99a5cd86.jpg?type=w&w=100&quality=100");
-}
+
 
 .main_book_report_writer_content_username {
   color: #6f6f6f;
