--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,116 +1,211 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>회원가입 | 히포북</title>
-    <link rel="stylesheet" th:href="@{/HBREGISTER/css/login.css}">
-    <link rel="stylesheet" th:href="@{/css/user/joinAuth.css}">
+    <link rel="stylesheet" th:href="@{/css/user/login.css}">
     <link rel="stylesheet" th:href="@{/css/user/hippobook.css}">
+<!--    <link rel="stylesheet" th:href="@{/css/user/joinAuth.css}">-->
 </head>
 <body data-theme="light">
-    <div data-a-1120 id="wrap" class="web-mount">
-        <section data-a-1120 class="content">
-            <div data-g-1180 data-a-1120 class="login-container">
-<!--                <div data-f-1160 data-g-1180 class="back-component">-->
-<!--                    <div data-f-1170 class="back line">-->
-<!--                        <button data-f-1170 type="button" class="close-button">-->
-<!--                            <i data-f-1170 class="mds-icon&#45;&#45;arrow-left">-->
-<!--                            </i>-->
-<!--                        </button>-->
-<!--                    </div>-->
-<!--                </div>-->
-                <div data-g-1180 class="login-content">
-                    <img data-b-1130 class="logo-picture" th:src="@{/images/user/Logo.png}" width="79px">
-                    <h3 data-g-1180 class="title">회원가입</h3>
-                    <p data-g-1180 class="sub-title">나만의 작은 도서관 히포북</p>
-                    <div data-g-1180 class="input-item">
-                        <div data-g-1180 class="mds-input input mds-input--default mds-input--required mds-input--left">
-                            <div class="picture-box">
+<div data-a-1120 id="wrap" class="web-mount">
+    <section data-a-1120 class="content">
+        <div data-g-1180 data-a-1120 class="login-container">
+            <div class="login-content">
+                <img class="logo-picture" th:src="@{/images/user/Logo.png}">
+                <h3 class="title">회원가입</h3>
+                <p class="sub-title">나만의 작은 도서관 히포북</p>
+                <div class="mds-input input mds-input--default mds-input--required mds-input--left" style="height: 295px;">
+                    <div class="picture-box">
+                        <div class="inner">
+                            <div class="image-box"></div>
+                            <label class="picture-change-button">
+                                <input type="file" id="file-input" accept=".jpg, .jpeg, .png, .gif, .heic">
+                                변경
+                            </label>
+                        </div>
+                    </div>
+                    <div class="input-item">
+                        <div class="mds-input input mds-input--default mds-input--left">
+                            <label>
                                 <div class="inner">
-                                    <div class="image-box"></div>
-                                    <label class="picture-change-button">
-                                        <input type="file" id="file-input" accept=".jpg, .jpeg, .png, .gif, .heic">
-                                        변경
-                                    </label>
+                                    <div class="input">
+                                                    <span id="input-245-label" class="label">
+                                                        닉네임
+                                                    </span>
+                                        <input autocomplete="off" id="input-245" aria-labelledby="input-245-label" type="text" placeholder="필명 입력" class="mds-input-field">
+                                    </div>
+                                    <button type="button" aria-label="내용 삭제" class="mds-icon--input-delete clear-button" style></button>
                                 </div>
-                            </div>
-                            <div class="input-item">
-                                <div class="mds-input input mds-input--default mds-input--left">
+                            </label>
+                        </div>
+                    </div>
+                    <div class="input-item fade-in">
+                        <div class="jumin-number">
+                            <div class="one">
+                                <div class="mds-input input jumin1 mds-input--default mds-input--left">
                                     <label>
                                         <div class="inner">
                                             <div class="input">
-                                    <span id="input-245-label" class="label">
-                                        닉네임
-                                    </span>
-                                                <input autocomplete="off" id="input-245" aria-labelledby="input-245-label" type="text" placeholder="필명 입력" class="mds-input-field">
+                                                                    <span id="input-154-label" class="label">
+                                                                        생년월일, 성별
+                                                                    </span>
+                                                <input autocomplete="off" id="input-154" aria-labelledby="input-154-label" aria-errormessage="input-154-message" type="number"
+                                                       placeholder="생년월일" pattern="\d*" class="mds-input-field">
                                             </div>
-                                            <button type="button" aria-label="내용 삭제" class="mds-icon--input-delete clear-button" style></button>
+                                        </div>
+                                    </label>
+                                </div>
+                                <span class="line">-</span>
+                                <div class="two">
+                                    <div class="mds-input input jumin2 mds-input--default mds-input--center">
+                                        <label>
+                                            <div class="inner">
+                                                <div class="input">
+                                                    <input autocomplete="off" id="input-155" aria-labelledby="input-155-label" aria-errormessage="input-155-message" type="number"
+                                                           placeholder="0" pattern="\d*" class="mds-input-field">
+                                                </div>
+                                            </div>
+                                        </label>
+                                    </div>
+                                    <span class="dot">● ● ● ● ● ●</span>
+                                </div>
+                                <button data-v-13cc5357="" type="button" aria-label="내용 삭제" class="mds-icon--input-delete clear-button clear-jumin" style="display: none;"></button>
+                            </div>
+                        </div>
+                            <div data-e-1160 aria-owns="mdsselect-input- 156" class="mds-select input mds-select--default mds-select--action" name="agency">
+                                <div class="inner" style="height: 56px;">
+                                    <span id="mdsselct-label-input-156" class="label">통신사</span>
+                                    <input type="text" placeholder="통신사 선택" readonly="readonly" class="mds-select-input">
+                                </div>
+                            </div>
+                            <i class="mds-icon--down-filled">
+                            </i>
+                        </div>
+                        <ul role="listbox" aria-labelledby="mdsselct-label-input-156" style="display: none;">
+                            <li role="option" id="input-156-0" tabindex="-1" class>
+                                <span>SKT</span>
+                            </li>
+                            <li role="option" id="input-156-1" tabindex="-1" class>
+                                <span>KT</span>
+                            </li>
+                            <li role="option" id="input-156-2" tabindex="-1" class>
+                                <span>LG U+</span>
+                            </li>
+                            <li role="option" id="input-156-3" tabindex="-1" class>
+                                <span>SKT 알뜰폰</span>
+                            </li>
+                            <li role="option" id="input-156-4" tabindex="-1" class>
+                                <span>KT 알뜰폰</span>
+                            </li>
+                            <li role="option" id="input-156-5" tabindex="-1" class>
+                                <span>LG U+ 알뜰폰</span>
+                            </li>
+                        </ul>
+                    </div>
+                <div class="input-item">
+                    <div class="mds-input input mds-input--default mds-input--left">
+                        <label style="margin-bottom: 10px;">
+                            <div class="inner">
+                                <div class="input">
+                                                                <span id="input-157-label" class="label">
+                                                                    휴대폰 번호 입력
+                                                                </span>
+                                    <input autocomplete="off" id="input-157" aria-labelledby="input-157-label" type="number" placeholder="01012345678" pattern="\d*" class="mds-input-field">
+                                </div>
+                                <button type="button" aria-label="내용 삭제" class="mds-icon--input-delete clear-button" style="display: none;"></button>
+                            </div>
+                        </label>
+                            </div>
+                            <div class="input-item">
+                                <div class="mds-input input mds-input--default mds-input--left">
+                                    <label style="width: 439px;">
+                                        <div class="inner">
+                                            <div class="input">
+                                <span id="input-278-label" class="label">
+                                    인증번호
+
+                                </span>
+                                                <input autocomplete="off" id="input-278" aria-labelledby="input-278-label"
+                                                       aria-errormessage="input-278-message" type="text" placeholder="인증번호 6자리 입력"
+                                                       class="mds-input-field">
+                                            </div>
+                                            <button type="button" aria-label="내용 삭제" class="mds-icon--input-delete clear-button" style="display: none;"></button>
+                                            <span class="time">0:00</span>
                                         </div>
                                     </label>
                                 </div>
                             </div>
-                            <label>
-                                <div class="inner">
-                                    <div class="input">
+                            </div>
+                            <p class="text" style="margin-bottom: 5px;">
+                                인증번호가 오지 않는다면?
+                                <button type="button" class="text-button">재발송</button>
+                            </p>
+                        <div data-g-1180 class="input-item">
+                            <div data-g-1180 class="mds-input input mds-input--default mds-input--required mds-input--left">
+                                <label>
+                                    <div class="inner">
+                                        <div class="input">
                                         <span id="input-237-label" class="label">
                                             아이디
                                             <sup>*</sup>
                                         </span>
-                                        <input autocomplete="off" id="input-237" aria-labelledby="input-237-label" type="text"
-                                        placeholder="아이디 입력" class="mds-input-field">
+                                            <input autocomplete="off" id="input-237" aria-labelledby="input-237-label" aria-errormessage="input-237-messeage" type="text"
+                                                   placeholder="아이디 입력" class="mds-input-field">
+                                        </div>
+                                        <button type="button" aria-label="내용 삭제" class="mds-icon--input-delete clear-button" style="display: none;"></button>
                                     </div>
-                                    <button type="button" aria-label="내용 삭제" class="mds-icon--input-delete clear-button" style="display: none;"></button>
+                                </label>
+                                <div class="message-wrap">
+                                    <p aria-live="assertive" id="input-237-message" role="alert" class="message">6-12자 이내 영문 소문자,숫자 사용 가능</p>
                                 </div>
-                            </label>
-                            <div class="message-wrap">
-                                <p aria-live="assertive" id="input-237-message" role="alert" class="message">6-12자 이내 영문 소문자,숫자 사용 가능</p>
                             </div>
-                        </div>
-                        <div data-g-1180 class="mds-input input mds-input--default mds-input--required mds-input-left">
-                            <label>
-                                <div class="inner">
-                                    <div class="input">
+                            <div data-g-1180 class="mds-input input mds-input--default mds-input--required mds-input-left">
+                                <label>
+                                    <div class="inner">
+                                        <div class="input">
                                         <span id="input-238-label" class="label">
                                             비밀번호
                                             <sup>*</sup>
                                         </span>
-                                        <input autocomplete="off" id="input-238" aria-labelledby="input-238-label" aria-errormessage="input-238-message" type="password"
-                                        placeholder="비밀번호 입력" class="mds-input-field">
+                                            <input autocomplete="off" id="input-238" aria-labelledby="input-238-label" aria-errormessage="input-238-message" type="password"
+                                                   placeholder="비밀번호 입력" class="mds-input-field">
+                                        </div>
+                                        <button type="button" class="secret-button">
+                                            <i class="icon-eye_off"></i>
+                                        </button>
                                     </div>
-                                    <button type="button" class="secret-button">
-                                        <i class="icon-eye_off"></i>
-                                    </button>
+                                </label>
+                                <div class="message-wrap">
+                                    <p aria-live="assertive" id="input-238-message" role="alert" class="message">8~20자 이내 영문 대/소문자,숫자,특수문자만 사용 가능합니다.</p>
                                 </div>
-                            </label>
-                            <div class="message-wrap">
-                                <p aria-live="assertive" id="input-238-message" role="alert" class="message">8~20자 이내 영문 대/소문자,숫자,특수문자만 사용 가능합니다.</p>
-                        </div>
-                    </div>
-                    <div data-g-1180 class="mds-input input mds-input--default mds-input--required mds-input--left">
-                        <label>
-                            <div class="inner">
-                                <div class="input">
+                            </div>
+                            <div data-g-1180 class="mds-input input mds-input--default mds-input--required mds-input--left">
+                                <label>
+                                    <div class="inner">
+                                        <div class="input">
                                     <span id="input-239-label" class="label">
                                         비밀번호 재입력
                                         <sup>*</sup>
                                     </span>
-                                    <input autocomplete="off" id="input-239" aria-labelledby="input-239-label" type="password" placeholder="비밀번호 재입력" class="mds-input-field">
-                                </div>
-                                <button type="button" class="secret-button">
-                                    <i class="icon-eye_off"></i>
-                                </button>
+                                            <input autocomplete="off" id="input-239" aria-labelledby="input-239-label" aria-errormessage="input-239-message" type="password"
+                                                   placeholder="비밀번호 재입력" class="mds-input-field">
+                                        </div>
+                                        <button type="button" class="secret-button">
+                                            <i class="icon-eye_off"></i>
+                                        </button>
+                                    </div>
+                                </label>
                             </div>
-                        </label>
-                    </div>
-                </div>
-                <div data-g-1180 class="button-area">
-                    <button data-g-1180 type="button" disabled="disabled" class="next-button mds-button mds-button--primary mds-button--h56 mds-button--r4">
-                        <a th:href="@{/user/profile-setting}">다음</a>
-                    </button>
+                            <div class="button-area mt16">
+                                <button type="button" disabled="disabled" class="next-button mds-button mds-button--primary mds-button--h56 mds-button--r4">
+                                    <a th:href="@{/user/check-account}">가입</a>
+                                </button>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-    </div>
+</div>
 </body>
 </html>
