--- a/src/main/resources/templates/mypage/myPageBookContainer.html
+++ b/src/main/resources/templates/mypage/myPageBookContainer.html
@@ -10,190 +10,194 @@
 <body>
 
 
-    <div>
-        <header>
-            <div class="header_layout">
-                <h1 class="header_logo">
-                    <div class="header_logo_layout">
-                        <a href="">
-                            <!--홈페이지 버튼 -->
-                            <img
-                                    src="../myPageImg/HippoBook_logo.png"
-                                    alt=""
-                                    class="header_logo_images"
-                            />
-                        </a>
-                    </div>
-                </h1>
-                <div class="header_right_layout">
+<div>
+    <header>
+        <div class="header_layout">
+            <h1 class="header_logo">
+                <div class="header_logo_layout">
                     <a href="">
-                        <!-- 알람 페이지 이동  -->
+                        <!--홈페이지 버튼 -->
                         <img
-                                src="../myPageImg/alarm.png"
+                                src="/images/main/HippoBook_logo.png"
                                 alt=""
-                                class="header_right_alarm"
+                                class="header_logo_images"
                         />
                     </a>
-                    <ul class="header_right_login">
-                        <a href="" class="header_right_login_box">로그인</a>
+                </div>
+            </h1>
+            <div class="header_right_layout">
+                <a href="">
+                    <!-- 알람 페이지 이동  -->
+                    <img
+                            src="/images/main/alarm.png"
+                            alt=""
+                            class="header_right_alarm"
+                    />
+                </a>
+                <ul class="header_right_login">
+                    <a href="" class="header_right_login_box">로그인</a>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <div class="main_top">
+            <div class="main_top_layout">
+                <a href="">
+                    <!-- 카테고리  -->
+                    <img
+                            src="/images/main/Category.png"
+                            alt=""
+                            class="main_top_category"
+                    />
+                </a>
+                <div class="main_top_category_tap">
+                    <ul class="main_top_category_list">
+                        <li>
+                            <a href="">내 서재</a>
+                            <!-- 내 서재 이동 -->
+                        </li>
+                        <li>
+                            <a href="">쪽지</a>
+                            <!-- 쪽지 이동 -->
+                        </li>
+                        <li>
+                            <a href="">검색</a>
+                            <!-- 검색 이동 -->
+                        </li>
                     </ul>
                 </div>
             </div>
-        </header>
-
-        <main>
-            <div class="main_top">
-                <div class="main_top_layout">
-                    <a href="">
-                        <!-- 카테고리  -->
-                        <img
-                                src="../myPageImg/Category.png"
-                                alt=""
-                                class="main_top_category"
-                        />
-                    </a>
-                    <div class="main_top_category_tap">
-                        <ul class="main_top_category_list">
-                            <li>
-                                <a href="">내 서재</a>
-                                <!-- 내 서재 이동 -->
-                            </li>
-                            <li>
-                                <a href="">쪽지</a>
-                                <!-- 쪽지 이동 -->
-                            </li>
-                            <li>
-                                <a href="">검색</a>
-                                <!-- 검색 이동 -->
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </main>
-        <section class="profile">
-            <div class="profile-all">
-                <div id="profile-photo">
-                    <input
-                            type="file"
-                            id="profile-image"
-                            name="profile-photo-file"
-                            accept="image/*"
-                    />
-                    <img
-                            id="hippo"
-                            src="/images/mypage/free-icon-hippo-3250992.png"
-                            alt=""
-                    />
-                </div>
-                <div id="profile-name">
-                    <h3>책먹는 하마</h3>
-                    <span>님의 서재</span>
-                </div>
-                <div id="follow">
-                    <span>팔로워 <span>0</span></span>
-                    <span>팔로잉 <span>0</span></span>
-                </div>
-            </div>
-            <th:block>
-                <div id="my-favorite-book">
-                    <img id="best-book-img" alt=""/>
-                </div>
-            </th:block>
-        </section>
-    </div>
-    <div>
-        <div class="mypage-cate">
-            <div><a href="">소개</a></div>
-            <div><a href="">책장</a></div>
-            <div><a href="">내 게시물</a></div>
-            <div><a href="">스티커 신청</a></div>
-            <div><a href="">관리</a></div>
         </div>
-        <form action="">
-            <section>
-                <div class="book-Container-cate">
-                    <div>
-                        <span>총 </span><span th:text="${#lists.size(bookContainerList)}"></span><span>권</span>
-                    </div>
-                    <div class="book-Container-cate-list">
-                        <span>정렬</span>
-                        <div class="book-Container-cate-list-setting">
-                            <img src="/images/mypage/up-arrow.png" alt="" id="list-setting-image">
-                        </div>
+    </main>
+    <section class="profile" th:object="${profileDto}">
+        <div class="profile-all">
+            <div id="profile-photo">
+                <input
+                        type="file"
+                        id="profile-image"
+                        name="profile-photo-file"
+                        accept="image/*"
+                />
+                <img
+                        id="hippo"
+                        src="/images/mypage/free-icon-hippo-3250992.png"
+                        alt=""
+                />
+            </div>
+
+            <div id="profile-name">
+                <h3 th:text="*{userNickName}"></h3>
+                <span>님의 서재</span>
+            </div>
+            <div id="follow">
+                <span>팔로워 <span th:text="*{followerCnt}"></span></span>
+                <span>팔로잉 <span th:text="*{followingCnt}"></span></span>
+            </div>
+        </div>
+
+        <div id="my-favorite-book">
+            <img th:src="@{'/upload/' + *{fileUploadPath} + '/' + *{fileUuid} + '_' + *{fileName}}"
+                 id="best-book-img" alt=""/>
+        </div>
+    </section>
+</div>
+<div>
+    <div class="mypage-cate">
+        <div><a href="">소개</a></div>
+        <div><a href="">책장</a></div>
+        <div><a href="">내 게시물</a></div>
+        <div><a href="">스티커 신청</a></div>
+        <div><a href="">관리</a></div>
+    </div>
+    <form action="">
+        <section>
+            <div class="book-Container-cate">
+                <div>
+                    <span>총 </span><span th:text="${#lists.size(bookContainerList)}"></span><span>권</span>
+                </div>
+                <div class="book-Container-cate-list">
+                    <span>담은날짜 순</span>
+                    <div class="book-Container-cate-list-setting">
+                        <img src="/images/mypage/up-arrow.png" alt="" id="list-setting-image">
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
+
+    </form>
+</div>
+
+<section class="my-book-get-list-section">
+    <div class="my-book-get-list">
+        <div th:each="bookContainerDto : ${bookContainerList}">
+            <div class="my-book-get-list-image" th:data-id="${bookContainerDto.bookHasId}">
+                <img th:src="@{'/upload/' + ${bookContainerDto.fileUploadPath} + '/' + ${bookContainerDto.fileUuid} + '_' + ${bookContainerDto.fileName}}"
+                     alt="">
+            </div>
+            <div class="my-book-get-list-detail">
+                <span th:text="${bookContainerDto.bookName}"></span>
+                <span class="writer" th:text="${bookContainerDto.bookCaseCreate}"></span>
+                <span class="writer" th:text="${bookContainerDto.bookHasPercent}"></span>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<footer>
+
+</footer>
+<section class="book-container-modal-bg">
+    <div>
+
+        <form action="" class="book-container-modal-list">
+            <div class="x-box">
+                <img src="" alt="">
+            </div>
+
+            <div class="book-container-modal-list-btn">
+                <input type="button" value="인생책 설정" class="best-book" data-id="">
+            </div>
+            <div class="book-container-modal-list-btn">
+                <th:block th:href="@{/book/book_info_page.html}">
+                    <input type="button" value="책정보 보기" class="book-info-detail">
+                </th:block>
+            </div>
+            <div class="book-container-modal-list-btn">
+                <input type="button" value="목록에서 삭제" class="book-list-delete" data-id="">
+            </div>
+            <div class="book-container-modal-list-btn">
+                <input type="button" value="책 상태 설정" class="book-status-set">
+            </div>
+
 
         </form>
     </div>
 
-        <section class="my-book-get-list-section">
-            <div class="my-book-get-list" >
-                <div th:each="bookContainerDto : ${bookContainerList}">
-                    <div class="my-book-get-list-image" th:data-id="${bookContainerDto.bookHasId}">
-                        <img src="/images/mypage/책표지 예제.jpg" alt="">
-                    </div>
-                    <div class="my-book-get-list-detail">
-                        <span th:text="${bookContainerDto.bookCaseName}"></span>
-                        <span class="writer" th:text="${bookContainerDto.bookCaseCreate}"></span>
-                        <span class="writer" th:text="${bookContainerDto.bookHasPercent}"></span>
-                    </div>
-                </div>
+</section>
+<section class="book-container-modal-bg2">
+    <div>
 
+        <form action="" class="book-container-modal-list2">
+            <div class="x-box2">
+                <img src="" alt="">
             </div>
-        </section>
+            <div class="book-container-modal-list-btn2">
+                <input type="button" value="읽음" class="book-reading-finish-btn" data-status="읽음">
+            </div>
+            <div class="book-container-modal-list-btn2">
+                <input type="button" value="읽는 중" class="book-reading-btn" data-status="읽는 중">
+            </div>
+            <div class="book-container-modal-list-btn2">
+                <input type="button" value="안읽음" class="book-no-reading-btn" data-status="안읽음">
+            </div>
 
-    <footer>
+        </form>
+    </div>
 
-    </footer>
-    <section class="book-container-modal-bg">
-        <div>
-
-            <form action="" class="book-container-modal-list">
-                <div class="x-box">
-                    <img src="" alt="">
-                </div>
-
-                <div class="book-container-modal-list-btn">
-                    <input type="button" value="인생책 설정" class="best-book" data-id="">
-                </div>
-                <div class="book-container-modal-list-btn">
-                    <input type="button" value="책정보 보기" class="book-info-detail">
-                </div>
-                <div class="book-container-modal-list-btn">
-                    <input type="button" value="목록에서 삭제" class="book-list-delete" data-id="">
-                </div>
-                <div class="book-container-modal-list-btn">
-                    <input type="button" value="책 상태 설정" class="book-status-set">
-                </div>
-
-
-            </form>
-        </div>
-
-    </section>
-    <section class="book-container-modal-bg2">
-        <div>
-
-            <form action="" class="book-container-modal-list">
-                <div class="x-box">
-                    <img src="" alt="">
-                </div>
-                <div class="book-container-modal-list-btn">
-                    <input type="button" value="읽음" >
-                </div>
-                <div class="book-container-modal-list-btn">
-                    <input type="button" value="읽는 중" >
-                </div>
-                <div class="book-container-modal-list-btn">
-                    <input type="button" value="안읽음" >
-                </div>
-
-            </form>
-        </div>
-
-    </section>
+</section>
 
 </body>
 </html>
