--- a/src/main/resources/templates/feed/readpage.html
+++ b/src/main/resources/templates/feed/readpage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>히포북</title>
     <link rel="stylesheet" th:href="@{/css/feed/readpage.css}">
-    <script defer th:src="@{/js/feed/feed_modal.js}"></script>
+    <script defer th:src="@{/js/feed/read.js}"></script>
 </head>
 <body>
     
