--- a/src/main/resources/templates/feed/readwrite.html
+++ b/src/main/resources/templates/feed/readwrite.html
@@ -79,9 +79,9 @@
             <div class="read_datebox">
                 <input type="date" class="read_dateinput">
             </div>
-            <span>책 이미지</span>
+            <span>히포북 정보</span>
             <div class="read_imgbox">
-              <input type="file" class="read_imginput">
+              <button>검색</button>
             </div>
             <span>독서일기</span>
                 <div class="read_contentbox">
